--- a/style.css
+++ b/style.css
@@ -50,12 +50,14 @@ main {
   text-align: end;
   margin-right: 15%;
   color: #ACACAC;
+  margin-bottom: 0;
 }
 .line {
   grid-column: 3/ span 9;
   width: 100%;
   border: none;
-  border-top: 1px solid #ACACAC;
+  border-top: 1px solid #cccccc;
+  margin: 8px 0;
 }
 /* timeblocks */
 .time-block {
@@ -63,5 +65,19 @@ main {
   width: 100%;
   height: 70px;
   grid-column: 3 / span 9;
-  background-color: grey;
+}
+.past {
+  background-color: #aaaaaa;
+  border: 1px solid #aaaaaa;
+}
+.present {
+  background-color: #E9EEFF;
+  border: 1px solid #587EFB;
+}
+.future {
+  background-color: #CEFFD1;
+  border: 1px solid #51FF5C;
+}
+.empty {
+  background-color: transparent;
 }
