--- a/style.css
+++ b/style.css
@@ -60,6 +60,9 @@ main {
   margin: 8px 0;
 }
 /* timeblocks */
+#timeblocks {
+  z-index: 5;
+}
 .time-block {
   border-radius: 5px;
   width: 100%;
@@ -67,7 +70,7 @@ main {
   grid-column: 3 / span 9;
 }
 .past {
-  background-color: #aaaaaa;
+  background-color: #e0e0e0;
   border: 1px solid #aaaaaa;
 }
 .present {
@@ -80,4 +83,28 @@ main {
 }
 .empty {
   background-color: transparent;
+}
+/* current time line */
+#current-time {
+  position: relative;
+  z-index: 1;
+} 
+#current-line {
+  position: absolute;
+  top: 16px;
+  right: 0;
+  width: 100%;
+  height: 2px;
+  border: none;
+  border-top: 1px solid #587EFB;
+  margin: 0;
+  grid-column: 2 / span 11;
+}
+#triangle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-top: 16px solid transparent;
+  border-bottom: 16px solid transparent;
+  border-right: 27px solid #587EFB;
 }
