--- a/style.css
+++ b/style.css
@@ -29,8 +29,10 @@ h3 {
 }
 header {
   top: 0;
-  box-shadow: 0 1px 5px 5px #aaaaaa;
+  box-shadow: 0 1px 5px 5px #d1d1d1;
   padding: 20px;
+  z-index: 10;
+  background-color: #fff;
 }
 #day-display {
   grid-column: 3 / span 4;
@@ -51,13 +53,9 @@ main {
   margin-right: 15%;
   color: #ACACAC;
   margin-bottom: 0;
-}
-.line {
-  grid-column: 3/ span 9;
-  width: 100%;
-  border: none;
-  border-top: 1px solid #cccccc;
-  margin: 8px 0;
+  align-self: flex-end;
+  position: relative;
+  bottom: -5px;
 }
 /* timeblocks */
 #timeblocks {
@@ -66,8 +64,13 @@ main {
 .time-block {
   border-radius: 5px;
   width: 100%;
-  height: 70px;
+  height: 92px;
   grid-column: 3 / span 9;
+  margin-bottom: 8px;
+  z-index: 8;
+}
+.time-block:hover {
+  border-width: 2px;
 }
 .past {
   background-color: #e0e0e0;
@@ -82,7 +85,7 @@ main {
   border: 1px solid #51FF5C;
 }
 .empty {
-  background-color: transparent;
+  background-color: #fff;
 }
 /* current time line */
 #current-time {
