--- a/style.css
+++ b/style.css
@@ -114,8 +114,63 @@ main {
   border-right: 27px solid #587EFB;
 }
 /* timeblock input */
+button {
+  font-weight: bold;
+}
 input {
   border: none;
-  width: 80%;
-  margin: 0 10%;
+  width: 100%;
+}
+input:focus {
+  border: none;
+  outline: none;
+}
+/* text form */
+#text-form {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  padding: 2vw;
+  transform: translate(-50%, -50%);
+  z-index: 12;
+  box-shadow: 0 1px 5px 5px #d1d1d1;
+  background-color: #fff;
+  max-width: 900px;
+  width: 100%;
+  border-radius: 5px;
+}
+#save {
+  padding: 5px 10px;
+  border-radius: 2px;
+  border: none;
+  background-color: #587EFB;
+  color: #fff;
+}
+#save:hover {
+  box-shadow: 0 1px 2px 2px #d1d1d1;
+}
+#close:hover,  #close:focus, #close:active, #close {
+  background-color: transparent;
+  outline: none;
+  border: none;
+}
+#close:hover {
+  font-size: larger;
+}
+
+@media only screen and (min-width: 992px){
+  #text-form {
+  max-width: 960px;
+}
+}
+
+@media only screen and (min-width: 768px){
+  #text-form {
+    max-width: 720px;
+  }
+}
+@media only screen and (min-width: 576px){
+  #text-form {
+  max-width: 540px;
+}
 }
