--- a/style.css
+++ b/style.css
@@ -123,6 +123,9 @@ main {
 button {
   font-weight: bold;
 }
+button:focus {
+  outline: none;
+}
 input {
   border: none;
   width: 100%;
@@ -159,6 +162,10 @@ input:focus {
 }
 #save:hover {
   box-shadow: 0 1px 2px 2px #d1d1d1;
+}
+#save:focus, #save:active, #save:onfocus {
+  outline: none;
+  border: none;
 }
 #close:hover,  #close:focus, #close:active, #close {
   background-color: transparent;
